<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>sk.qpp</groupId>
    <artifactId>spring-security-oauth2webclient</artifactId>
    <version>1.0-SNAPSHOT</version>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.9.BUILD-SNAPSHOT</version>
        <!--version>2.1.8.RELEASE</version-->
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <java.version>8</java.version>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <encoding>UTF-8</encoding>
        <!-- 5.2.0.BUILD-SNAPTSHOT je cca o rok starsi ako ten 5.1.7 -->
        <spring-security.version>5.2.0.BUILD-SNAPSHOT</spring-security.version>
    </properties>

    <!--
	gradle version:

	DONE compile project(':spring-security-config')
	DONE compile project(':spring-security-oauth2-client')
	DONE compile project(':spring-security-oauth2-jose')
	DONE compile 'org.springframework:spring-webflux'
	DONE compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
	DONE compile 'org.springframework.boot:spring-boot-starter-web'
	DONE compile 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
	DONE compile 'io.projectreactor.netty:reactor-netty'

	testCompile project(':spring-security-test')
	testCompile 'org.springframework.boot:spring-boot-starter-test'
    -->

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-oauth2-client -->
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-config</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-oauth2-client</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-oauth2-jose</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webflux</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
        <dependency>
            <groupId>org.thymeleaf.extras</groupId>
            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
        </dependency>
        <dependency>
            <groupId>io.projectreactor.netty</groupId>
            <artifactId>reactor-netty</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.sourceforge.htmlunit</groupId>
            <artifactId>htmlunit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>2.1.8.RELEASE</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                        <configuration>
                            <classifier>spring-boot</classifier>
                            <mainClass>
                                sample.OAuth2WebClientApplication
                            </mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <from>
                        <image>azul/zulu-openjdk-alpine:11-jre</image>
                    </from>
                    <to>
                        <image>spring-security-oauth2login-jib</image>
                    </to>
                    <container>
                        <jvmFlags>
                            <jvmFlag>-Xms32m</jvmFlag>
                            <jvmFlag>-Xmx96m</jvmFlag>
                            <!--jvmFlag>-XX:+UseShenandoahGC</jvmFlag-->
                            <jvmFlag>-Xlog:gc</jvmFlag>
                        </jvmFlags>
                        <!--args>
                            <arg>some</arg>
                            <arg>args</arg>
                        </args-->
                        <ports>
                            <port>8080</port>
                            <!--port>2000-2003/udp</port-->
                        </ports>
                    </container>
                </configuration>
            </plugin>

            <!-- code coverage during "unit" tests -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.4</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <!-- attached to Maven test phase -->
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <!-- spring-restdocs-asciidoctor -->
        <!-- https://github.com/spring-projects/spring-restdocs/issues/581 -->
        <repository>
            <id>repository.spring.snapshot</id>
            <name>Spring Snapshot Repository</name>
            <url>https://repo.spring.io/snapshot</url>
        </repository>
        <repository>
            <id>repository.spring.milestone</id>
            <url>https://repo.spring.io/milestone/</url>
        </repository>
    </repositories>
</project>
